# nsb-3xx

./: README.md
AppConfig-1.66/: Makefile.old
CGI.pm-3.55/: META.yml  Makefile.old
Data-Dumper-2.131/: Makefile.old
Digest-MD5-2.52/: Makefile.old
DirectFB-1.4.2/: Makefile  Makefile.in  aclocal.m4  config.guess  config.h  config.status  configure  directfb-config
HTML-Parser-3.56/: Makefile.old
HTML-Tagset-3.20/: Makefile.old
Image-ExifTool-8.65/: Changes  MANIFEST  META.yml  Makefile.old  exiftool  perl-Image-ExifTool.spec  xmp2gps.args
JSON-2.53/: Makefile.old
LVM2.2.02.64/: Makefile  VERSION  VERSION_DM  config.status  make.tmpl  make.tmpl.in
Linux-PAM-1.1.3/: Makefile  Makefile.am  Makefile.in  aclocal.m4  compile  config.h  config.status  configure  configure.in
MPlayer_New-r34578/: asxparser.d  av_helpers.d  av_opts.d  bstr.d  codec-cfg  codec-cfg.d  codecs.conf.h  command.d  config.h  config.mak  cpudetect.d  edl.d  fmt-conversion.d  help_mp.h  m_config.d  m_option.d  m_property.d  m_struct.d  mencoder.d  mixer.d  mp_fifo.d  mp_msg.d  mp_strings.d  mpcommon.d  mplayer.d  parser-cfg.d  parser-mecmd.d  parser-mpcmd.d  path.d  (+7 more)
aalib-1.2/: ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.dos  Makefile.in  Makefile.os2  aacurkbd.c  aacurmou.c  aacurses.c  aados.c  aadoskbd.c  aadosmou.c  aagpm.c  aainfo.c  aakbdreg.c  aalib.info  aalib.texinfo  aalinux.c  aamoureg.c  aaos2.c  aaos2kbd.c  aaos2mou.c  aaregist.c  aastdout.c  aax.c  aaxkbd.c  aaxmouse.c  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.in
(+7687 files in other folders)
